--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -93,7 +93,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost", "schoolhub", "mongooseim", "10.3.0.4", "10.3.2.1", "10.3.2.2"] }.
+{hosts, ["localhost", "schoolhub.com", "mongooseim", "10.3.0.4", "10.3.2.1", "10.3.2.2"] }.
 
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
@@ -161,7 +161,7 @@
   { 5285, ejabberd_cowboy, [
         {num_acceptors, 10},
         {transport_options, [{max_connections, 1024}]},
-        {ssl, [{certfile, "priv/ssl/schoolhub.crt"}, {keyfile, "priv/ssl/schoolhub.key"}, {password, ""}]},
+        {ssl, [{certfile, "priv/ssl/fullchain.pem"}, {keyfile, "priv/ssl/privkey.pem"}, {password, ""}]},
         {modules, [
             {"_", "/http-bind", mod_bosh},
             {"_", "/ws-xmpp", mod_websockets, [
@@ -191,7 +191,7 @@
       {num_acceptors, 10},
       {transport_options, [{max_connections, 1024}]},
       {protocol_options, [{compress, true}]},
-      {ssl, [{certfile, "priv/ssl/schoolhub.crt"}, {keyfile, "priv/ssl/schoolhub.key"}, {password, ""}]},
+      {ssl, [{certfile, "priv/ssl/fullchain.pem"}, {keyfile, "priv/ssl/privkey.pem"}, {password, ""}]},
       {modules, [
           {"_", "/api/sse", lasse_handler, [mongoose_client_api_sse]},
           {"_", "/api/messages/[:with]", mongoose_client_api_messages, []},
@@ -225,7 +225,7 @@
 			%% certificate, specify the full path to the
 			%% file and uncomment this line:
 			%%
-                        {certfile, "priv/ssl/schoolhub.pem"}, starttls,
+                        {certfile, "priv/ssl/schoolhub.com.pem"}, starttls,
                         
                         %%{zlib, 10000},
 			%% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
@@ -281,7 +281,7 @@
 %%
 %% s2s_certfile: Specify a certificate file.
 %%
-{s2s_certfile, "priv/ssl/schoolhub.pem"}.
+{s2s_certfile, "priv/ssl/schoolhub.com.pem"}.
 
 %% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
 %% {s2s_ciphers, "TLSv1.2:TLSv1.3"}.
@@ -438,7 +438,7 @@
    [{server, {pgsql, "10.3.0.3", 5432, "schoolhub", "schoolhub", "schoolhub",
 	      [{ssl, true}, 
 	       {ssl_opts, [{verify, verify_none}, 
-			   {cacertfile, "priv/ssl/schoolhub_cacert.crt"}]}]
+			   {cacertfile, "priv/ssl/chain.pem"}]}]
 	     }}]}
 ]}.
 
