--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -16,23 +16,23 @@ backend phoenix
     server phoenix_server 10.3.0.5:4000
 
 frontend phoenix-in_ssl
-    bind *:443 ssl crt /etc/cert/schoolhub.pem
+    bind *:443 ssl crt /etc/cert/schoolhub.com.pem
     default_backend phoenix_ssl
 
 backend phoenix_ssl
-    server phoenix_server 10.3.0.5:4001 ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server phoenix_server 10.3.0.5:4001 ssl ca-file /etc/cert/chain.pem
     
 
 frontend xmpp-in
     mode tcp
-    bind *:5222 ssl crt /etc/cert/schoolhub.pem
+    bind *:5222 ssl crt /etc/cert/schoolhub.com.pem
     default_backend mongooseim
 
 backend mongooseim
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5222 check send-proxy ssl ca-file /etc/cert/schoolhub_cacert.pem
-    server mongooseim2 10.3.2.2:5222 check send-proxy ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server mongooseim1 10.3.2.1:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
+    server mongooseim2 10.3.2.2:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
 
 frontend xmpp-bosh-in
     mode tcp
@@ -47,14 +47,14 @@ backend mongooseim-bosh
 
 frontend xmpp-bosh-in_ssl
     mode tcp
-    bind *:5285 ssl crt /etc/cert/schoolhub.pem
+    bind *:5285 ssl crt /etc/cert/schoolhub.com.pem
     default_backend mongooseim-bosh_ssl
 
 backend mongooseim-bosh_ssl
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5285 check ssl ca-file /etc/cert/schoolhub_cacert.pem
-    server mongooseim2 10.3.2.2:5285 check ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server mongooseim1 10.3.2.1:5285 check ssl ca-file /etc/cert/chain.pem
+    server mongooseim2 10.3.2.2:5285 check ssl ca-file /etc/cert/chain.pem
 
 
 frontend stats
