db is now verifying ssl cert

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -437,8 +437,7 @@
   {rdbms, global, default, [{workers, 10}],
    [{server, {pgsql, "10.3.0.3", 5432, "schoolhub", "schoolhub", "schoolhub",
 	      [{ssl, true}, 
-	       {ssl_opts, [{verify, verify_none}, 
-			   {cacertfile, "priv/ssl/chain.pem"}]}]
+	       {ssl_opts, [{cacertfile, "priv/ssl/chain.pem"}]}]
 	     }}]}
 ]}.
 
