connection between haproxy and phx server is now secure

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -10,7 +10,7 @@ defaults
 
 frontend phoenix-in
     bind *:80
-    default_backend phoenix
+    default_backend phoenix_ssl
 
 backend phoenix
     server phoenix_server 10.3.0.5:4000
