apply TLS in cookies and xmpp (wss doesn't work)

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -37,7 +37,7 @@ backend mongooseim
 frontend xmpp-bosh-in
     mode tcp
     bind *:5280
-    default_backend mongooseim-bosh
+    default_backend mongooseim-bosh_ssl
 
 backend mongooseim-bosh
    mode tcp
