wss in xmpp in auth now works

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -10,13 +10,11 @@ defaults
 
 frontend phoenix-in
     bind *:80
-    default_backend phoenix_ssl
-
-backend phoenix
-    server phoenix_server 10.3.0.5:4000
+    http-request redirect scheme https code 301
 
 frontend phoenix-in_ssl
     bind *:443 ssl crt /etc/cert/schoolhub.com.pem
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
     default_backend phoenix_ssl
 
 backend phoenix_ssl
@@ -38,12 +36,6 @@ frontend xmpp-bosh-in
     mode tcp
     bind *:5280
     default_backend mongooseim-bosh_ssl
-
-backend mongooseim-bosh
-   mode tcp
-   option independent-streams
-   server mongooseim1 10.3.2.1:5280
-   server mongooseim2 10.3.2.2:5280
 
 frontend xmpp-bosh-in_ssl
     mode tcp
