exposing more secrets as env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,8 @@ services:
       - ./letsencrypt/live/schoolhub.com:/opt/app/priv/cert
     environment:
       - SECRET_KEY_BASE=/d8p4MwXOA3uA9jZ2fIouO5BwvwOIRM9Gqny3Cf7XFaY/pQ1Yukf53H9iy9AugqP
+      - SESSION_SIGNING_SALT=ygUkyJkL
+      - SESSION_CRYPT_SALT=Xx5sjPQJ
       - MIX_ENV=prod
     env_file:
       - ./postgres/postgres.env
