extracting domain name from phoenix app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,7 @@ services:
       - ./letsencrypt/live/schoolhub.com:/opt/app/priv/cert
     environment:
       - MIX_ENV=prod
+      - DOMAIN=schoolhub.com
     env_file:
       - ./postgres/postgres.env
       
