rename ssl cert to remove hardcoded domain name

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -13,7 +13,7 @@ frontend phoenix-in
     http-request redirect scheme https code 301
 
 frontend phoenix-in_ssl
-    bind *:443 ssl crt /etc/cert/schoolhub.com.pem
+    bind *:443 ssl crt /etc/cert/joined_cert.pem
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     default_backend phoenix_ssl
 
@@ -23,7 +23,7 @@ backend phoenix_ssl
 
 frontend xmpp-in
     mode tcp
-    bind *:5222 ssl crt /etc/cert/schoolhub.com.pem
+    bind *:5222 ssl crt /etc/cert/joined_cert.pem
     default_backend mongooseim
 
 backend mongooseim
@@ -39,7 +39,7 @@ frontend xmpp-bosh-in
 
 frontend xmpp-bosh-in_ssl
     mode tcp
-    bind *:5285 ssl crt /etc/cert/schoolhub.com.pem
+    bind *:5285 ssl crt /etc/cert/joined_cert.pem
     default_backend mongooseim-bosh_ssl
 
 backend mongooseim-bosh_ssl
