--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -225,7 +225,7 @@
 			%% certificate, specify the full path to the
 			%% file and uncomment this line:
 			%%
-                        {certfile, "priv/ssl/schoolhub.com.pem"}, starttls,
+                        {certfile, "priv/ssl/joined_cert.pem"}, starttls,
                         
                         %%{zlib, 10000},
 			%% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
@@ -281,7 +281,7 @@
 %%
 %% s2s_certfile: Specify a certificate file.
 %%
-{s2s_certfile, "priv/ssl/schoolhub.com.pem"}.
+{s2s_certfile, "priv/ssl/joined_cert.pem"}.
 
 %% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
 %% {s2s_ciphers, "TLSv1.2:TLSv1.3"}.
