--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,14 +61,14 @@ services:
     shm_size: 256M
     volumes:
       - ./postgres/schema/pg.sql:/docker-entrypoint-initdb.d/pg.sql
-      - ./letsencrypt/live/schoolhub.com/fullchain.pem:/var/lib/postgresql/schoolhub.crt
-      - ./letsencrypt/live/schoolhub.com/privkey.pem:/var/lib/postgresql/schoolhub.key
+      - ./letsencrypt/live/schoolhub.com/fullchain.pem:/var/lib/postgresql/fullchain.pem
+      - ./letsencrypt/live/schoolhub.com/privkey.pem:/var/lib/postgresql/privkey.pem
       - ./postgres/data/data:/var/lib/postgresql/data
     env_file:
       - ./postgres/postgres.env
     command: -c ssl=on
-             -c ssl_cert_file=/var/lib/postgresql/schoolhub.crt
-             -c ssl_key_file=/var/lib/postgresql/schoolhub.key
+             -c ssl_cert_file=/var/lib/postgresql/fullchain.pem
+             -c ssl_key_file=/var/lib/postgresql/privkey.pem
 
 
   haproxy:
@@ -87,7 +87,7 @@ services:
     restart: always
     volumes:
       - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
-      - ./letsencrypt/live/schoolhub.com/schoolhub.com.pem:/etc/cert/schoolhub.com.pem
+      - ./letsencrypt/live/schoolhub.com/joined_cert.pem:/etc/cert/joined_cert.pem
       - ./letsencrypt/live/schoolhub.com/chain.pem:/etc/cert/chain.pem
 
 
