--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -93,7 +93,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost", "schoolhub.com", "mongooseim", "10.3.0.4", "10.3.2.1", "10.3.2.2"] }.
+{hosts, ["localhost", "%DOMAIN%", "mongooseim", "10.3.0.4", "10.3.2.1", "10.3.2.2"] }.
 
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
@@ -435,7 +435,7 @@
 %  {cassandra, global, default, [{workers, 100}], [{servers, [{"server1", 9042}]}, {keyspace, "big_mongooseim"}]},
 %  {rdbms, global, default, [{workers, 10}], [{server, {mysql, "server", 3306, "database", "username", "password"}}]}
   {rdbms, global, default, [{workers, 10}],
-   [{server, {pgsql, "10.3.0.3", 5432, "schoolhub", "schoolhub", "schoolhub",
+   [{server, {pgsql, "%POSTGRES_HOST%", 5432, "%POSTGRES_DB%", "%POSTGRES_USER%", "%POSTGRES_PASSWORD%",
 	      [{ssl, true}, 
 	       {ssl_opts, [{cacertfile, "priv/ssl/chain.pem"}]}]
 	     }}]}
