--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -161,7 +161,7 @@
   { 5285, ejabberd_cowboy, [
         {num_acceptors, 10},
         {transport_options, [{max_connections, 1024}]},
-        {ssl, [{certfile, "priv/ssl/fullchain.pem"}, {keyfile, "priv/ssl/privkey.pem"}, {password, ""}]},
+        {ssl, [{certfile, "priv/ssl/cert.pem"}, {keyfile, "priv/ssl/privkey.pem"}, {cacertfile, "priv/ssl/chain.pem"}, {password, ""}]},
         {modules, [
             {"_", "/http-bind", mod_bosh},
             {"_", "/ws-xmpp", mod_websockets, [
