remote email almost works now

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -49,6 +49,16 @@ backend mongooseim-bosh_ssl
     server mongooseim2 10.3.2.2:5285 check ssl ca-file /etc/cert/chain.pem
 
 
+frontend smtp-in
+    mode tcp
+    bind *:1587
+    default_backend postfix
+
+backend postfix
+    mode tcp
+    server postfix 10.3.0.2:587
+
+
 frontend stats
     bind *:8404
     stats enable
