remove static IP-s wherever I can get away with it

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -18,7 +18,7 @@ frontend phoenix-in_ssl
     default_backend phoenix_ssl
 
 backend phoenix_ssl
-    server phoenix_server 10.3.0.5:4001 ssl ca-file /etc/cert/chain.pem
+    server phoenix_server phx_server:4001 ssl ca-file /etc/cert/chain.pem
     
 
 frontend xmpp-in
@@ -29,8 +29,8 @@ frontend xmpp-in
 backend mongooseim
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
-    server mongooseim2 10.3.2.2:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
+    server mongooseim1 mongooseim-1:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
+    server mongooseim2 mongooseim-2:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
 
 frontend xmpp-bosh-in
     mode tcp
@@ -45,8 +45,8 @@ frontend xmpp-bosh-in_ssl
 backend mongooseim-bosh_ssl
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5285 check ssl ca-file /etc/cert/chain.pem
-    server mongooseim2 10.3.2.2:5285 check ssl ca-file /etc/cert/chain.pem
+    server mongooseim1 mongooseim-1:5285 check ssl ca-file /etc/cert/chain.pem
+    server mongooseim2 mongooseim-2:5285 check ssl ca-file /etc/cert/chain.pem
 
 
 frontend smtp-in
@@ -56,7 +56,7 @@ frontend smtp-in
 
 backend postfix
     mode tcp
-    server postfix 10.3.0.2:587
+    server postfix postfix:587
 
 
 frontend stats
