--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -93,7 +93,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost", "%DOMAIN%", "mongooseim", "10.3.0.4", "10.3.2.1", "10.3.2.2"] }.
+{hosts, ["localhost", "%DOMAIN%", "mongooseim", "haproxy", "mongooseim-1", "mongooseim-2"] }.
 
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
@@ -523,7 +523,7 @@
 %% You can put here as many accounts as you want.
 %%
 %{acl, admin, {user, "alice", "localhost"}}.
-{acl, admin, {user, "admin", "10.3.2.1"}}.
+{acl, admin, {user, "admin", "mongooseim-1"}}.
 
 %%
 %% Blocked users
