--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
       - "5280"
       - "5285"
     networks:
-      schoolhub_network:
-        ipv4_address: 10.3.2.1
+      - schoolhub_network
     restart: always
     depends_on:
       - postgres
@@ -37,8 +36,7 @@ services:
       - "5280"
       - "5285"
     networks:
-      schoolhub_network:
-        ipv4_address: 10.3.2.2
+      - schoolhub_network
     restart: always
     depends_on:
       - postgres
@@ -58,9 +56,10 @@ services:
     container_name: schoolhub_postfix
     image: boky/postfix
     hostname: postfix
+    expose:
+      - "587"
     networks:
-      schoolhub_network:
-        ipv4_address: 10.3.0.2
+      - schoolhub_network
     restart: always
     volumes:
       - ./letsencrypt/DKIM:/etc/opendkim/keys
@@ -77,7 +76,7 @@ services:
       - "5432"
     networks:
       schoolhub_network:
-        ipv4_address: 10.3.0.3
+        ipv4_address: 10.3.1.3
     restart: always
     shm_size: 256M
     volumes:
@@ -105,8 +104,7 @@ services:
       - "5280:5280"
       - "5285:5285"
     networks:
-      schoolhub_network:
-        ipv4_address: 10.3.0.4
+      - schoolhub_network
     restart: always
     volumes:
       - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
@@ -117,15 +115,14 @@ services:
   phx_server:
     container_name: phx_server
     image: phx_server:v0.2.1
-    hostname: phoenix
+    hostname: phx_server
     build:
       context: ./schoolhub
     expose:
       - "4000"
       - "4001"
     networks:
-      schoolhub_network:
-        ipv4_address: 10.3.0.5
+      - schoolhub_network
     restart: on-failure
     depends_on:
       - postgres
