complete removal of static IP-s

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -8,6 +8,7 @@ defaults
     timeout client 24h
     timeout server 60m
 
+
 frontend phoenix-in
     bind *:80
     http-request redirect scheme https code 301
@@ -18,8 +19,8 @@ frontend phoenix-in_ssl
     default_backend phoenix_ssl
 
 backend phoenix_ssl
-    server phoenix_server phx_server:4001 ssl ca-file /etc/cert/chain.pem
-    
+    server phoenix_server phx_server:4001 check ssl ca-file /etc/cert/chain.pem
+
 
 frontend xmpp-in
     mode tcp
