--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,11 +72,10 @@ services:
     container_name: schoolhub_postgres
     image: postgres
     hostname: postgres
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
     networks:
-      schoolhub_network:
-        ipv4_address: 10.3.1.3
+      - schoolhub_network
     restart: always
     shm_size: 256M
     volumes:
@@ -138,7 +137,4 @@ services:
     
 networks:
   schoolhub_network:
-    ipam:
-      config:
-        - subnet: 10.3.0.0/16
-        
+    
