--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -19,7 +19,7 @@ frontend phoenix-in_ssl
     default_backend phoenix_ssl
 
 backend phoenix_ssl
-    server phoenix_server phx_server:4001 check ssl ca-file /etc/cert/chain.pem
+    server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/chain.pem
 
 
 frontend xmpp-in
