add k3d haproxy implementation

--- a/kubernetes/k3d_config.yaml
+++ b/kubernetes/k3d_config.yaml
@@ -6,10 +6,13 @@ ports:
   - port: 5432:30432
     nodeFilters:
       - agent[*]
-  - port: 80:30400
+  - port: 80:30080
     nodeFilters:
       - agent[*]
-  - port: 443:30401
+  - port: 443:30443
+    nodeFilters:
+      - agent[*]
+  - port: 5285:30285
     nodeFilters:
       - agent[*]
 volumes:
