--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -14,24 +14,24 @@ frontend phoenix-in
     http-request redirect scheme https code 301
 
 frontend phoenix-in_ssl
-    bind *:443 ssl crt /etc/cert/joined_cert.pem
+    bind *:443 ssl crt /etc/cert/live/joined_cert.pem
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     default_backend phoenix_ssl
 
 backend phoenix_ssl
-    server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/chain.pem
+    server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
 frontend xmpp-in
     mode tcp
-    bind *:5222 ssl crt /etc/cert/joined_cert.pem
+    bind *:5222 ssl crt /etc/cert/live/joined_cert.pem
     default_backend mongooseim
 
 backend mongooseim
     mode tcp
     option independent-streams
-    server mongooseim1 mongooseim-1:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
-    server mongooseim2 mongooseim-2:5222 check send-proxy ssl ca-file /etc/cert/chain.pem
+    server mongooseim1 mongooseim-1:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
+    server mongooseim2 mongooseim-2:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
 
 frontend xmpp-bosh-in
     mode tcp
@@ -40,14 +40,14 @@ frontend xmpp-bosh-in
 
 frontend xmpp-bosh-in_ssl
     mode tcp
-    bind *:5285 ssl crt /etc/cert/joined_cert.pem
+    bind *:5285 ssl crt /etc/cert/live/joined_cert.pem
     default_backend mongooseim-bosh_ssl
 
 backend mongooseim-bosh_ssl
     mode tcp
     option independent-streams
-    server mongooseim1 mongooseim-1:5285 check ssl ca-file /etc/cert/chain.pem
-    server mongooseim2 mongooseim-2:5285 check ssl ca-file /etc/cert/chain.pem
+    server mongooseim1 mongooseim-1:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
+    server mongooseim2 mongooseim-2:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
 frontend stats
