fix mongooseim kubernetes deployment

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -31,7 +31,7 @@ backend mongooseim
     mode tcp
     option independent-streams
     server mongooseim1 mongooseim-1:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
-    server mongooseim2 mongooseim-2:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
+    #server mongooseim2 mongooseim-2:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
 
 frontend xmpp-bosh-in
     mode tcp
@@ -47,7 +47,7 @@ backend mongooseim-bosh_ssl
     mode tcp
     option independent-streams
     server mongooseim1 mongooseim-1:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
-    server mongooseim2 mongooseim-2:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
+    #server mongooseim2 mongooseim-2:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
 frontend stats
