--- a/kubernetes/deployment/phoenix.yaml
+++ b/kubernetes/deployment/phoenix.yaml
@@ -78,9 +78,9 @@ spec:
         secret:
           secretName: tls-selfsigned-secret
           items:
-          - key: fullcert
+          - key: fullchain.pem
             path: fullchain.pem
-          - key: key
+          - key: privkey.pem
             path: privkey.pem
-          - key: CA
+          - key: chain.pem
             path: chain.pem
