--- a/kubernetes/headless/schoolhub.yaml
+++ b/kubernetes/headless/schoolhub.yaml
@@ -107,7 +107,10 @@ spec:
         - name: JOIN_CLUSTER
           value: "false"
         - name: DOMAIN
-          value: schoolhub.ddns.net
+          valueFrom:
+            configMapKeyRef:
+              name: domain-address
+              key: DOMAIN
         - name: POSTGRES_DB
           valueFrom:
             secretKeyRef:
@@ -154,7 +157,14 @@ spec:
         - name: MIX_ENV
           value: prod
         - name: DOMAIN
-          value: schoolhub.ddns.net
+          valueFrom:
+            configMapKeyRef:
+              name: domain-address
+              key: DOMAIN
+        - name: POSTFIX_HOST
+          value: localhost
+        - name: MONGOOSEIM_HOST
+          value: localhost
         - name: POSTGRES_DB
           valueFrom:
             secretKeyRef:
